# ptrans

./: .gitignore  CMakeLists.txt  ColorimetricSegmenter.cpp  ColorimetricSegmenter.h  ColorimetricSegmenter.qrc  ConversionLab.cpp  ConversionLab.h  HSV.h  HSVDialog.cpp  HSVDialog.h  HSVDialog.ui  KmeansDlg.cpp  KmeansDlg.h  KmeansDlg.ui  QuantiDialog.cpp  QuantiDialog.h  QuantiDialog.ui  README.md  RgbDialog.cpp  RgbDialog.h  RgbDialog.ui  ScalarDialog.cpp  ScalarDialog.h  ScalarDialog.ui  SegmenterPlugin.cpp  SegmenterPlugin.h  SegmenterPlugin.qrc  info.json  qColorimetricSegmenter.cpp  qColorimetricSegmenter.h
doc/Rapport_hebdo/: Rapport1_21-10_27-10.tex  Rapport2_28-10_03-11.tex  Rapport3_4-11_10-11.tex  Rapport4_11-11_17-11.tex  Rapport5_18-11_24-11.tex  Rapport6_25-11_01-12.tex  Rapport7_02-12_08-12.tex  rapport1.tex  rapport2.tex  rapport3.tex  rapport4.tex  rapport5.tex
doc/brief/: main.tex
doc/cahier_des_charges/: cdc.tex  main.lof  main.tex
doc/cahier_des_charges/gantt_project/: Sprint2.gan
doc/rapport_description/: Rapport_description_system.tex  Rapport_description_systeme.tex  Rapport_description_systeme_beta.tex
doc/rapports_iterations/iteration_1/: Rapport1_21-10_27-10.tex
doc/rapports_iterations/iteration_1/gantt_project/: Sprint2.gan
doc/rapports_iterations/iteration_2/: Rapport_sprint_review.tex
doc/rapports_iterations/iteration_3/: Rapport_iteration_3.tex
doc/rapports_iterations/iteration_4/: Rapport_iteration_4.tex
doc/rapports_iterations/iteration_5/: Rapport_iteration_5.tex
doc/rapports_iterations/iteration_6/: Rapport_iteration_6.tex
src/: ConversionRGB_Lab.cpp
